--- a/style.css
+++ b/style.css
@@ -373,13 +373,14 @@ section {
     margin-bottom: 3rem;
     color: #ffffff;
     font-size: 2.25rem;
+    margin-bottom: 1.5rem
 }
 
 .section-subtitle {
     text-align: center;
     color: #FF8C42;
     font-size: 2rem;
-    margin-bottom: 1.7rem;
+    margin-bottom: 2rem;
     font-weight: 700;
 }
 
